[package]
name = "leavebot-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
base64 = "0.22.0"
chrono = { version = "0.4.35", features = ["serde"] }
itertools = "0.12.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
ureq = { version = "2.9.6", features = ["json"] }
