[package]
name = "bamboo-leave-to-slack-bot"
version = "0.1.1"
edition = "2024"
repository = "https://github.com/mdmoss/bamboo-leave-to-slack"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
base64 = "0.22.1"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.15", features = ["derive"] }
itertools = "0.14.0"
serde = { version = "1.0.207", features = ["derive"] }
serde_json = "1.0.125"
ureq = { version = "3.1.2", features = ["json"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
